--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                 <li><strong>Stosy:</strong> kliknij nad kubeczkiem, aby postawić na nim kolejny kubeczek.</li>
                 <li><strong>Dowolne konstrukcje:</strong> kliknij w pustym miejscu, aby rozpocząć nową konstrukcję.</li>
             </ul>
+            <p>Dodatkowe funkcje:</p>
+            <ul>
+                <li><strong>Wyrównanie do siatki:</strong> wszystkie kubeczki są automatycznie przyciągane do punktów siatki, zapewniając idealnie równe rozmieszczenie.</li>
+                <li><strong>Inteligentne wykrywanie:</strong> aplikacja automatycznie rozpoznaje zamierzony typ konstrukcji i odpowiednio dostosowuje położenie kubeczków.</li>
+                <li><strong>Zaawansowana analiza wzorców:</strong> system analizuje istniejące wzorce i kontekst, aby lepiej rozpoznać zamierzony typ konstrukcji (piramida, stos lub zwykłe umieszczenie).</li>
+                <li><strong>Adaptacyjne zachowanie:</strong> aplikacja dostosowuje położenie nowych kubeczków do istniejących wzorców konstrukcji, ułatwiając tworzenie spójnych struktur.</li>
+                <li><strong>Ochrona przed kolizjami:</strong> system zapobiega nakładaniu się kubeczków na siebie, automatycznie znajdując najbliższe wolne miejsce w przypadku kolizji.</li>
+                <li><strong>Precyzyjne wybieranie podpór:</strong> w przypadku wielu możliwych podpór dla piramidy, system inteligentnie wybiera najlepsze kubeczki wspierające.</li>
+            </ul>
+            <p><small>Funkcje testowe dostępne w konsoli: testPyramid(), testRectangle(), testRectangleWithGap()</small></p>
         </div>
     </div>
 
