--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                 </label>
             </div>
             
+            <div class="grid-options">
+                <label for="show-grid">
+                    <input type="checkbox" id="show-grid" checked> 
+                    Pokaż siatkę
+                </label>
+            </div>
+            
             <div class="actions">
                 <button id="clear-btn">Wyczyść</button>
                 <button id="export-btn">Eksportuj do PDF</button>
@@ -58,6 +65,7 @@
                 <li>Przeciągnij i upuść kubeczek, aby zmienić jego pozycję.</li>
                 <li>Kliknij prawym przyciskiem myszy na kubeczek, aby go usunąć.</li>
                 <li>Użyj opcji "Przyciągaj do siatki", aby włączyć lub wyłączyć automatyczne wyrównywanie do siatki.</li>
+                <li>Użyj opcji "Pokaż siatkę", aby włączyć lub wyłączyć widoczność siatki.</li>
                 <li>Użyj przycisku "Eksportuj do PDF", aby zapisać swoją konstrukcję.</li>
             </ol>
             <p>W aplikacji możesz budować różne typy konstrukcji:</p>
@@ -72,6 +80,7 @@
                 <li><strong>Przyciąganie do siatki:</strong> kubeczki mogą być automatycznie wyrównywane do punktów siatki dla bardziej precyzyjnego ułożenia.</li>
                 <li><strong>Obracanie kubeczków:</strong> kliknij na kubeczek, aby zmienić jego orientację (wierzchołkiem w górę lub w dół).</li>
                 <li><strong>Ochrona przed wyjściem poza planszę:</strong> system zapobiega przesunięciu kubeczków poza obszar planszy.</li>
+                <li><strong>Widoczność siatki:</strong> możliwość włączenia lub wyłączenia siatki pomocniczej dla lepszej orientacji.</li>
             </ul>
         </div>
     </div>
