Enhance cup placement logic and add physical validation in Cup Construction Generator. Updated `index.html` to include additional features for cup manipulation and improved `app.js` with functions for checking physical placement validity, support detection, and direction adjustments based on underlying cups. Enhanced user feedback for invalid placements and rotations.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
                 <li><strong>Piramidy:</strong> układaj kubeczki jeden nad drugim w formie piramidy.</li>
                 <li><strong>Stosy:</strong> układaj kubeczki jeden na drugim.</li>
             </ul>
+            <p>Dodatkowe funkcje:</p>
+            <ul>
+                <li><strong>Przeciąganie i upuszczanie:</strong> możesz swobodnie przesuwać kubeczki po planszy.</li>
+                <li><strong>Przyciąganie do siatki:</strong> kubeczki mogą być automatycznie wyrównywane do punktów siatki dla bardziej precyzyjnego ułożenia.</li>
+                <li><strong>Obracanie kubeczków:</strong> kliknij na kubeczek, aby zmienić jego orientację (wierzchołkiem w górę lub w dół).</li>
+                <li><strong>Ochrona przed wyjściem poza planszę:</strong> system zapobiega przesunięciu kubeczków poza obszar planszy.</li>
+                <li><strong>Widoczność siatki:</strong> możliwość włączenia lub wyłączenia siatki pomocniczej dla lepszej orientacji.</li>
+                <li><strong>Udostępnianie przez URL:</strong> możesz wygenerować link, który po otwarciu odtworzy aktualny układ kubeczków.</li>
+                <li><strong>Zasady fizyki:</strong> aplikacja weryfikuje, czy układ kubeczków jest fizycznie możliwy do zbudowania.</li>
+            </ul>
+            
+            <p>Zasady fizyczne układania kubeczków:</p>
+            <ul>
+                <li>Kubeczek stojący bezpośrednio na innym musi być odwrócony (aby nie wpadł do środka).</li>
+                <li>Kubeczek może stać na dwóch kubeczkach jako podparcie (jak w piramidzie).</li>
+                <li>Kubeczek nie może być ustawiony szerzej niż warstwa pod nim (nie może wystawać poza podporę).</li>
+                <li>Kubeczek nie może "wisieć w powietrzu" - musi mieć odpowiednie podparcie.</li>
+            </ul>
         </div>
     </div>
 
