Enhance mobile responsiveness and touch interactions in Cup Construction Generator. Updated `index.html` with additional meta tags for mobile optimization. Improved CSS for better layout and spacing on smaller screens, including touch-friendly adjustments. Enhanced `app.js` to support mobile device detection, touch events, and optimized canvas resizing for improved user experience.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+    <meta name="theme-color" content="#3498db">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>Wieże online</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/konva@9/konva.min.js"></script>
