--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>Wieże online</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://unpkg.com/konva@9/konva.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
+    <script src="js/konva.min.js"></script>
+    <script src="js/jspdf.min.js"></script>
+    <script src="js/lz-string.min.js"></script>
+    <script>
+        // Fallback dla różnych formatów eksportu jsPDF
+        if (typeof window.jspdf === 'undefined' && typeof window.jsPDF !== 'undefined') {
+            window.jspdf = { jsPDF: window.jsPDF };
+        }
+    </script>
     <script src="js/utils.js"></script>
 </head>
 <body>
